[package]
name = "apdu-core"
description = "Core library for composing APDU commands and parsing their responses."
version = "0.1.1"
license = "MIT"
homepage = "https://github.com/siketyan/apdu-rs"
repository = "https://github.com/siketyan/apdu-rs.git"
readme = "../README.md"
edition = "2021"
authors = [
    # Thank you for your contribution!
    # While contributing to this project, feed free to add your name here :)
    "Naoki Ikeguchi <me@s6n.jp>",
]

[dependencies]
