[package]
name = "apdu-core"
description = "Core library for composing APDU commands and parsing their responses."
version = "0.2.1"
license = "MIT"
homepage = "https://github.com/siketyan/apdu-rs"
repository = "https://github.com/siketyan/apdu-rs.git"
readme = "../README.md"
edition = "2021"
authors = [
    # Thank you for your contribution!
    # While contributing to this project, feed free to add your name here :)
    "Naoki Ikeguchi <me@s6n.jp>",
]

[dependencies]

[features]
default = ["std"]
std = []

# This crate also supports 16 bit length payloads.
# However longer payloads are not tested well, so we are enabling it only if this feature is turned on.
longer_payloads = []
