[package]
name = "apdu-derive"
description = "Implementation of procedural macro for apdu crate."
version = "0.2.0"
license = "MIT"
homepage = "https://github.com/siketyan/apdu-rs"
repository = "https://github.com/siketyan/apdu-rs.git"
readme = "../README.md"
edition = "2021"
authors = [
    # Thank you for your contribution!
    # While contributing to this project, feed free to add your name here :)
    "Naoki Ikeguchi <me@s6n.jp>",
]

[lib]
proc-macro = true

[dependencies]
apdu-core = { version = "=0.2.0", path = "../apdu-core" }
proc-macro2 = "1.0"
quote = "1"
syn = "1.0"

[dev-dependencies]
thiserror = "1.0"
